CORA-1738 Search secured for systemSecret